﻿2006-05-13  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/openglgraphics.cpp: Set color back to current color instead of
	setting it to white. Fixes white rectangles in equipment window.
	* src/being.cpp, src/being.h, src/player.cpp: Specify the color in
	which speech and names are supposed to be drawn. Removed unused
	mSpeechColor member.

2006-05-12  Björn Steinbrink <B.Steinbrink@gmx.de>

	* src/being.cpp: Fixed initialization order in Being ctor.

2006-05-12  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/sprites/item1202.png, 
	data/graphics/sprites/Makefile.am, src/being.cpp, src/being.h,
	src/localplayer.cpp, src/localplayer.h, src/main.cpp, src/player.cpp,
	The Mana World: You can now see the shirt when equipping a top
	equipment.

2006-05-05  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/gui/setup_video.cpp: Fixed some numeric conversions.

2006-05-03  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* configure.ac, src/game.cpp, src/graphics.cpp, src/main.cpp,
	src/openglgraphics.cpp, The Mana World: Increased fps limit granularity
	and cleaned some code, fixed some xml library name in Dev-C++ project
	file, switched version to 0.0.20.
	* src/game.cpp, src/gui/setup.cpp, src/gui/setup_video.cpp,
	src/gui/setup_video.h, src/main.cpp: FPS limit can now be set in setup
	dialog. Default value for FPS is 50. (Code based on peoro's patch).

2006-05-02  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* src/localplayer.cpp: Fixed the delay last move bug.

2006-04-29  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/tiles/cave.png: Added tiles by yosuhara.

2006-04-28  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/Woodland_ground.png: Graphical update of the 
	woodland tileset. Paths improved, and tiles that were redunant replaced	
	by new dirt tiles.
	* data/maps/new_9.1.tmx.gz: modified because of changes in the tileset 
	layout (no new server sided walkmap required)